--- a/gym-app/server/.env
+++ b/gym-app/server/.env
@@ -1,2 +1,6 @@
 MONGO_URI='mongodb+srv://ethanlee7102:4uhw29ygLc4yQq7M@cluster0.oi7zz.mongodb.net/gym-app?retryWrites=true&w=majority&appName=Cluster0'
 JWT_SECRET=supersecret
+AWS_ACCESS_KEY_ID=AKIARSDDYXN2DXAIRLR3
+AWS_SECRET_ACCESS_KEY=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
+AWS_REGION=us-west-2
+S3_BUCKET_NAME=gymapp-post-images
