--- a/gym-app/package.json
+++ b/gym-app/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.837.0",
     "@aws-sdk/s3-request-presigner": "^3.837.0",
-    "@expo/config-plugins": "~10.0.0",
+    "@expo/config-plugins": "~10.1.1",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
@@ -28,19 +28,20 @@
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "expo": "53.0.13",
+    "expo": "53.0.20",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-file-system": "~18.1.10",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
+    "expo-image-manipulator": "~13.1.7",
     "expo-image-picker": "~16.1.4",
-    "expo-linking": "~7.1.5",
-    "expo-router": "~5.1.1",
-    "expo-splash-screen": "~0.30.9",
+    "expo-linking": "~7.1.7",
+    "expo-router": "~5.1.4",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.9",
+    "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -49,14 +50,13 @@
     "multer-s3": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-native": "0.79.4",
+    "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-image-manipulator": "~13.1.7"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -64,7 +64,7 @@
     "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.7",
+    "jest-expo": "~53.0.9",
     "react-test-renderer": "^19.0.0",
     "typescript": "^5.3.3"
   },
