--- a/gym-app/package.json
+++ b/gym-app/package.json
@@ -27,6 +27,7 @@
     "bcryptjs": "^3.0.2",
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "expo": "53.0.20",
     "expo-blur": "~14.1.5",
@@ -37,6 +38,7 @@
     "expo-image": "~2.4.0",
     "expo-image-manipulator": "~13.1.7",
     "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.4",
     "expo-splash-screen": "~0.30.10",
@@ -58,8 +60,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-linear-gradient": "~14.1.5"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
