--- a/gym-app/package.json
+++ b/gym-app/package.json
@@ -48,10 +48,12 @@
     "expo-web-browser": "~14.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.7.1",
     "mongoose": "^8.16.0",
     "moti": "^0.30.0",
     "multer": "^2.0.1",
     "multer-s3": "^3.0.1",
+    "node-cron": "^4.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-native": "0.79.5",
