--- a/gym-app/video-compress-lambda/Dockerfile
+++ b/gym-app/video-compress-lambda/Dockerfile
@@ -1,9 +1,14 @@
 FROM public.ecr.aws/lambda/nodejs:20
 
-# install a static ffmpeg build and untar and ln ffmpeg to use in lambda
-RUN curl -L -o /tmp/ffmpeg.tar.xz https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-amd64-static.tar.xz \
- && tar -xJf /tmp/ffmpeg.tar.xz -C /opt \
- && ln -s /opt/ffmpeg-*/ffmpeg /usr/local/bin/ffmpeg
+# Put ffmpeg binaries in a dedicated folder and add it to PATH
+RUN mkdir -p /ffmpeg \
+ && curl -sSL -o /ffmpeg/ffmpeg.tar.xz https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-amd64-static.tar.xz \
+ && tar -xJf /ffmpeg/ffmpeg.tar.xz -C /ffmpeg \
+ && mv /ffmpeg/ffmpeg-*-amd64-static/* /ffmpeg \
+ && rm -rf /ffmpeg/ffmpeg-*-amd64-static /ffmpeg/ffmpeg.tar.xz
+
+# Make ffmpeg & ffprobe globally accessible
+ENV PATH="/ffmpeg:${PATH}"
 
 # lambda expects /var/task so place everything there
 WORKDIR /var/task
